# rust-rest-api-test

./: Cargo.toml  Dockerfile.localdevelopment  Rocket.toml
src/: bin.rs  db.rs
